--- a/partials/testHTML.html
+++ b/partials/testHTML.html
@@ -1,8 +1,7 @@
-<div id="container">
+<div class="container">
     <div site-header></div>
     <div>
         <textarea cols="30" rows="10" ng-model="htmlCode" ng-change="changeHTML(htmlCode)"></textarea>
         <div class="viewHTML"></div>
     </div>
-
 </div>
