--- a/partials/siteHeader.html
+++ b/partials/siteHeader.html
@@ -13,6 +13,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="#/"><span ></span>Home</a></li>
                 <li data-toggle="modal" data-target="" ><a href="#/testHTML">TestHTML</a></li>
+                <li data-toggle="modal" data-target="" ><a href="#/forum">Forum</a></li>
             </ul>
         </div>
     </div>
