--- a/partials/siteHeader.html
+++ b/partials/siteHeader.html
@@ -12,8 +12,12 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="#/"><span ></span>Home</a></li>
-                <li data-toggle="modal" data-target="" ><a href="#/testHTML">TestHTML</a></li>
-                <li data-toggle="modal" data-target="" ><a href="#/forum">Forum</a></li>
+                <li data-toggle="modal" ><a href="#/testHTML">TestHTML</a></li>
+                <li data-toggle="modal" ><a href="#/forum">Forum</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li data-toggle="modal" ><a href="#/logout">Logout</a></li>
             </ul>
         </div>
     </div>
