--- a/css/app.css
+++ b/css/app.css
@@ -38,12 +38,34 @@
     color: sienna;
 }
 
-.addPost{
+.addPost, .addComment{
     padding: 10px;
 }
 
 .panel-footer
 {
-    background-color: #adadad;
     color: #dff0d8;
+}
+ul.footer{
+    margin-top:10px;
+    text-align:center;
+}
+
+ul.footer li{
+    color:#333;
+    display:inline-block;
+}
+
+
+#footer{
+
+    bottom: -50px;
+    height: 50px;
+    left: 0;
+    position: absolute;
+    right: 0;
+}
+
+textarea{
+    resize: none;
 }
