--- a/partials/home.html
+++ b/partials/home.html
@@ -1,4 +1,36 @@
 <div class="container">
     <div site-header></div>
-    <p>Home</p>
+    <div  class="jumbotron">
+
+        <h1 style="text-align:center">Masters Web School</h1>
+        <p>
+        <h3 align="middle">Тук ще намерите информация,нужна за вашето домашно, проекти ,училищни предмети и даскалско впечатление</h3>
+        </p>
+    </div>
+    <div style="background-color:#dddddd" class ="jumbotron">
+        <h1>Възможности</h1>
+
+        <h3>До момента можете да намерите следната информация</h3>
+        <li>История</li>
+        <li>Биология</li>
+        <li>Химия</li>
+        <li>Програмиране</li>
+        <li>Физика</li>
+        <li>Информационни технологии</li>
+        <h2>Може да посетите нашият ръчно направен HTML Editor</h2>
+        <p>С него ще можете да пишете мигновенно визуализиран код</p>
+    </div>
+
+    <div  style="background-color:#dddddd"class="jumbotron">
+
+        <div align="middle">
+            <p><h2>Посетете и нашият училищен форум.</h2></p>
+            <h4>Бърз,лесен и полезен</h4>
+            <p>
+            <h5> Там ще можете да се консултирате с други ученици където и когато поискате.<h5>
+            </p>
+        </div>
+    </div>
+
+
 </div>
