--- a/partials/siteHeader.html
+++ b/partials/siteHeader.html
@@ -14,6 +14,7 @@
                 <li><a href="#/"><span ></span>Home</a></li>
                 <li data-toggle="modal" ><a href="#/testHTML">TestHTML</a></li>
                 <li data-toggle="modal" ><a href="#/forum">Forum</a></li>
+                <li data-toggle="modal" ><a href="#/allTest">Tests</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
