--- a/partials/testHTML.html
+++ b/partials/testHTML.html
@@ -1,6 +1,6 @@
-<div id="container">
+<div class="container">
     <div site-header></div>
-    <p align="center"color="green">Here you can test your own code<p/>
+    <p align="center" color="green">Here you can test your own code<p/>
     <div class="row">
         <div class="col-md-4">
             <section>
