fix interval bugs

--- a/partials/test.html
+++ b/partials/test.html
@@ -2,7 +2,7 @@
     <div site-header></div>
     <div>
        <h1>{{test.title}}</h1>
-        <div id="wrapper">
+        <div id="wrapperTest">
 
         </div>
     </div>
